...
    </string-array>


    <!-- Values -->
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Confirm_email">Confirm email</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="return_to_login">Return to Login</string>

    <string name="mood_following">Mood Following</string>
    <string name="mood_map">Mood Map</string>
    <string name="search">Search</string>
    <string name="user_profile">User Profile</string>
    <string name="user">User</string>
    <string name="date_and_time">Date and Time</string>
    <string name="emoticon">Emoticon</string>
    <string name="alone">Alone</string>
    <string name="reason_why_text">Reason why text</string>
    <string name="mood_photo">Mood photo</string>
...
    <string name="back">Back</string>
    <string name="insert_image">Insert Image</string>
    <string name="hint_reason_why_text">Why do you feel this way?</string>
    <string name="hint_trigger">What was the trigger?</string>
    <string name="hint_explanation">Explain your mood...</string>
    <string name="share_location">Share location</string>
    <string name="submit">Submit</string>
    <string name="permission_denied">Storage permission required to select images</string>
    <string name="date_for_mood_event">Date For Mood Event</string>
    <string name="delete_this_mood">Delete this mood</string>
    <string name="edit_this_mood">Edit this mood.</string>
    <string name="update_this_mood">Update this mood</string>

    <!-- Date filter buttons -->
    <string name="minDateBtnText">Min Date</string>
    <string name="maxDateBtnText">Max Date</string>
    <string name="private_this_mood_event">Private this Mood Event</string>
    <string name="privateString">Private</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="send">Send</string>
    <string name="mood_event_image">Mood Event Image</string>

    <string-array name="mood_array">
        <item>😡</item>
...
        <item>With a crowd</item>

    </string-array>

    <string name="slot_machine_ad_text">We noticed you\'ve been feeling sad lately. Our slot machine can bring joy into your life once again!</string>
    <string name="slot_machine_ad_button">Try it now!</string>
    <string name="editbutton">editButton</string>


</resources>
