<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/border"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="8dp">

...
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/editMenuIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/editbutton"
            android:scaleType="fitCenter"
...
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/mood_photo"
                    android:scaleType="fitCenter"
                    android:src="@drawable/mood" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
...
